add border radius to profile pic in nav bar

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -22,7 +22,7 @@
     justify-content: space-between;
 }
 
-.profile-img {
+.profile-img img {
     width: 40px;
     height: 40px;
     border-radius: 50%; 
