--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Ubuntu', sans-serif;
+}
+
 .nav-links {
     list-style-type: none;
     display: flex;
@@ -5,6 +9,7 @@
     margin: 0;
     gap: 20px;
     margin-left:50%;
+    
     
 
 }
@@ -24,6 +29,7 @@
 .nav-links li a {
     text-decoration: none;
     justify-content: space-between;
+    color: rgb(19, 225, 240)
 }
 
 .profile-img img {
