--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -41,23 +41,42 @@
     margin-left:90px;
     
 }
+
 footer {
-    background-color: rgba(12, 179, 179, 0);
+    background-color: black;
+    
 }
 
 .footer-container {
     width: 100%;
     padding: 70px 30px 20px;
+    
+    
 }
-
 .footerNav li {
     list-style-type: none;
+}
+
+.footerNav li a {
+    color: white;
+    text-decoration: none;
+
 }
 
 .social {
     display:flex;
     justify-content: center;
+    
 
+}
+
+.youtube {
+    color:red;
+
+}
+
+.github {
+    color:rgb(49, 7, 49);
 }
 .social i {
     text-decoration: none;
@@ -65,4 +84,9 @@ footer {
     background-color: white;
     margin: 5px;
     border-radius: 30%;
+}
+
+.footer-bottom {
+    text-align: center;
+    color: grey;
 }
