--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -9,10 +9,9 @@
   margin: 0;
   gap: 20px;
   margin-left:50%;
-  
-  
 
 }
+
 
 .nav-links li {
   margin: 0;
@@ -25,18 +24,35 @@
 }
 
 
-
 .nav-links li a {
   text-decoration: none;
   justify-content: space-between;
   color: rgb(19, 225, 240)
 }
 
+
 .profile-img img {
   width: 40px;
   height: 40px;
   border-radius: 50%; 
 }
+
+Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.btn{
+  width: 20%;
+  margin-left: 40%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
 
 footer {
   background-color: black;
@@ -46,7 +62,6 @@ footer {
 .footer-container {
   width: 100%;
   padding: 70px 30px 20px;
-  
   
 }
 
@@ -82,6 +97,7 @@ footer {
   margin: 5px;
   border-radius: 30%;
 }
+
 
 .youtube {
   color:red;
