add three example template, which will be used for post as template in blog html

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -144,3 +144,10 @@ footer {
     font-weight: bold;
     cursor: pointer;
   }
+
+  .blog-post-area {
+    display: flex;
+    justify-content: flex-start;
+    gap:2em;
+    padding-left: 30px;
+  }
