add pre post to blog page and profile pics, template in javascript can be used for post creation modal

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -147,7 +147,9 @@ footer {
 
   .blog-post-area {
     display: flex;
-    justify-content: flex-start;
-    gap:2em;
+    justify-content: space-evenly;
+
     padding-left: 30px;
   }
+
+  
