fix video size using class in javascript template

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -152,6 +152,7 @@ footer {
     padding-left: 30px;
   }
 
-.video-card {
-    width: 150px;
+.video-card img {
+    padding:10px;
+    width: 200px;
 }
