--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -154,5 +154,23 @@ footer {
 
 .video-card img {
     padding:10px;
-    width: 200px;
+    width: 250px;
+}
+
+.video-card h3 {
+    font-size: medium;
+    padding: 10px;
+    
+}
+
+.videos-container h1 {
+    padding:10px;
+}
+
+.video-card {
+    width: 300px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
