add style to paragraphs in team bio html

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -191,15 +191,16 @@ footer {
     border-radius: 10em;
     padding:5px;
     margin: auto;
-    border: 3px solid rgb(194, 180, 180);
+    border: 3px solid aqua; 
     padding: 10px;
     
 }
 
 .developer-cards p {
+    color:#5a5656ce;
     width:400px;
     margin: auto;
-    padding-bottom: 5px;
+  
   
    
 
@@ -217,4 +218,5 @@ footer {
     display: flex; 
     align-items: center;
     gap: 10px;
+    padding-bottom: 40px;
 }
