--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -209,7 +209,7 @@ footer {
 
 .developer-position {
     display:flex;
-    justify-content: center;
+    
 
   
 }
@@ -220,3 +220,43 @@ footer {
     gap: 10px;
     padding-bottom: 40px;
 }
+
+.hero img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.stanley-quote h3 {
+   text-align: center;
+   font-weight: bold;
+   padding-top: 40px;
+   font-size: xx-large;
+}
+
+.stanley-quote ul li {
+    list-style-type: none;
+    text-align: center;
+}
+
+.bolded {
+    font-weight: bold;
+}
+
+.stanley-quote p {
+    width:50%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    
+    
+   
+ }
+
+ .stanley-quote h1 {
+    text-align: center;
+    font-weight: bold;
+    padding-top: 50px;
+    font-size: xx-large;
+    text-decoration: underline;
+ }
