--- a/public/css/stanley.css
+++ b/public/css/stanley.css
@@ -8,15 +8,15 @@
   padding: 0;
   margin: 0;
   gap: 20px;
-  margin-left:50%;
-  
-  
+  margin-left: 50%;
+
+
 
 }
 
 .nav-links li {
   margin: 0;
-  
+
 }
 
 .nav-links a:hover {
@@ -35,25 +35,25 @@
 .profile-img img {
   width: 40px;
   height: 40px;
-  border-radius: 50%; 
+  border-radius: 50%;
 }
 
 footer {
   background-color: black;
-  
+
 }
 
 .footer-container {
   width: 100%;
   padding: 70px 30px 20px;
-  
-  
+
+
 }
 
 .footerNav ul {
   list-style-type: none;
-  display:flex;
-  justify-content: space-evenly; 
+  display: flex;
+  justify-content: space-evenly;
   flex-direction: row;
   margin: 2% 25%;
   flex-wrap: wrap;
@@ -70,10 +70,11 @@ footer {
 }
 
 .social {
-  display:flex;
-  justify-content: center; 
+  display: flex;
+  justify-content: center;
 
 }
+
 .social i {
   text-decoration: none;
   padding: 10px;
@@ -83,12 +84,12 @@ footer {
 }
 
 .youtube {
-  color:red;
+  color: red;
 
 }
 
 .github {
-  color:rgb(49, 7, 49);
+  color: rgb(49, 7, 49);
 }
 
 .footer-bottom {
@@ -108,13 +109,14 @@ footer {
 /* this style for post template card */
 .card-body a {
   float: right;
-  color:black;
+  color: black;
   background-color: aqua;
   border-color: grey;
 }
 
 .modal {
-  display: none; /* Hide the modal by default */
+  display: none;
+  /* Hide the modal by default */
   position: fixed;
   z-index: 1;
   left: 0;
@@ -131,7 +133,8 @@ footer {
   padding: 20px;
   border: 1px solid #888;
   border-radius: 4px;
-  max-width: 600px; /* Adjust the maximum width as needed */
+  max-width: 600px;
+  /* Adjust the maximum width as needed */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
 }
@@ -148,6 +151,6 @@ footer {
 .blog-post-area {
   display: flex;
   justify-content: flex-start;
-  gap:2em;
+  gap: 2em;
   padding-left: 30px;
 }
