--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,5 @@
-*{
-     margin: 0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
@@ -19,7 +19,7 @@ body {
     color: aliceblue;
     border-radius: 10px;
     padding: 30px 40px;
-} 
+}
 
 .wrapper h1 {
     font-size: 36px;
@@ -32,6 +32,7 @@ body {
     height: 50px;
     margin: 30px 0;
 }
+
 .input-box input {
     width: 100%;
     height: 100%;
@@ -45,6 +46,7 @@ body {
     padding: 20px 45px 20px 20px;
 
 }
+
 .input-box input::placeholder {
     color: #fff;
 }
@@ -56,23 +58,27 @@ body {
     transform: translate(-50%);
     font-size: 20px;
 }
+
 .wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
     font-size: 14.6px;
     margin: -15px 0 15px;
 }
+
 .remember-forgot label input {
     accent-color: #fff;
     margin-right: 3px;
 
 }
+
 .remember-forgot a {
     color: #fff;
     text-decoration: none;
 }
+
 .remember-forgot a:hover {
-     text-decoration: underline;
+    text-decoration: underline;
 }
 
 .wrapper .btn {
@@ -82,12 +88,13 @@ body {
     border: none;
     outline: none;
     border-radius: 40px;
-    box-shadow: 0 0 10px rgb(0,0,0,.1);
+    box-shadow: 0 0 10px rgb(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
     color: #333;
     font-weight: 600;
 }
+
 .wrapper .register-link {
     font-size: 14.5px;
     text-align: center;
@@ -99,6 +106,7 @@ body {
     text-decoration: none;
     font-weight: 600;
 }
+
 .register-link p a :hover {
     text-decoration: underline;
 }
