--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     min-height: 100vh;
     background: rgb(255, 255, 255);
+    background-image: url("../images/img.jpg");
 }
 .wrapper {
     width: 420px;
@@ -38,7 +39,7 @@ body {
     background: transparent;
     border: none;
     outline: none;
-    border: 2px solid #3ca1b0);
+    border: 2px solid #3ca1b0;
     border-radius: 40px;
     font-size: 16px;
     color: #fcfafa;
