removed repeating background image

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -12,6 +12,8 @@ body {
     min-height: 100vh;
     background: rgb(255, 255, 255);
     background-image: url("../images/img.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .wrapper {
     width: 420px;
