--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -116,8 +116,16 @@ footer {
   flex-wrap: wrap;
 }
 
-.toast{
-  position: absolute; 
-  top: 10px; 
-  right: 10px;
+.displayNew{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.newComment {
+  border: 10px solid black;
+  padding: 50px;
+  margin: 10px 10px;
 }
