--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -151,3 +151,10 @@ padding-right: 20px;
 
 
 
+.save-button {
+    width:100px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: aqua;
+    border-color: white;
+}
