error with route, needs checking to create new data

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -150,10 +150,13 @@ footer {
 
 .blog-post-area {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 
-    padding-left: 30px;
+   
 }
+
+
+
 
 .video-card img {
     padding: 10px;
