--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -186,6 +186,14 @@ footer {
 
 }
 
+.about-developers {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
 
 .developer-cards img {
     width: 200px;
