--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -4,26 +4,36 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
+
 .nav-links {
     list-style-type: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    gap: 20px;
+    margin-left: 50%;
 
 
 
 }
 
-.nav-links button {
-    display: block;
-    margin: 10px;
+.nav-links li {
+    margin: 0;
+
+}
+
+.nav-links a:hover {
+    text-decoration: underline;
+    color: aqua;
+}
+
+
+
+.nav-links li a {
     text-decoration: none;
-    font-size: larger;
-    background-color: rgba(155, 155, 128, 0.158);
-    color: rgb(35, 217, 241);
-    border: none;
-
-    width: 150px;
-
+    justify-content: space-between;
+    color: rgb(19, 225, 240)
 }
-
 .profile-img img {
     width: 40px;
     height: 40px;
