add push for bug

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -117,8 +117,8 @@ footer {
 .modal {
     display: none;
     /* Hide the modal by default */
-   
-    z-index: 0;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
