--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -106,8 +106,17 @@ footer {
     text-align: center;
 }
 
+.quote p {
+    color:darkslategray;
+}
+
+.card:hover {
+    box-shadow: 0 0 11px rgba(89, 197, 240, 0.856); 
+}
+
 .quote2 {
     background-color: white;
+    color:grey;
 }
 
 /* this style for post template card */
