add image on about page

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -127,6 +127,12 @@ footer {
     border-color: grey;
 }
 
+.image-computer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .modal {
     display: none;
     /* Hide the modal by default */
