--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -180,6 +180,43 @@ h3{
  margin: 5%;
 }
 
+.res {
+  background: linear-gradient(
+    to right, 
+    hsl(98 100% 62%), 
+    hsl(204 100% 59%)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+
+  
+}
+
+
+
+
+
+
+/* fancy underline under "help" and "knowledge" */
+.fancy {
+  position: relative;
+  white-space: nowrap;
+  &:after {
+    --deco-height: 0.3125em;
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: calc(var(--deco-height) * -0.625);
+    height: var(--deco-height);
+    background-image: url("data:image/svg+xml,%3Csvg width='100' height='64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M-17 30.5C-1 22 72-4 54 13 37.9 28.2-2.5 57.5 16 55.5s72-29 104-40' stroke='%2300FDCF' stroke-width='10'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h100v64H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+    background-size: auto 100%;
+    background-repeat: round;
+    background-position: 0em;
+  }
+}
+
 
 .Sbtn {
 width: 25%;
@@ -198,13 +235,22 @@ width: 25%;
 } */
 
 
+.center {
+  text-align: center;
+}
 
 .formTitle{
   display: flex;
   justify-content: center;
   padding-top: 30px;
-  margin: 3% 0px;
+  margin-top: 20px;
 }
+
+.form-group {
+  margin-bottom: 25px;
+}
+
+
 
 #tagSearchButton:hover{
  background-color: whitesmoke
@@ -247,8 +293,11 @@ width: 25%;
 
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 750px) {
   .tagButtonContainer {
     margin: 0px 5%;
+  }
+  .center{
+   
   }
 }
