--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -146,7 +146,10 @@ footer {
   background-color: black;
   width: 100%;
   height: auto;
-  transition: position ease; 
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 5px;
   z-index: 1000;
 }
 
@@ -173,13 +176,22 @@ h3{
 }
 
 /* resouces and stanley button */
-.resources-app{
+/* .resources-app{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
- margin: 5%;
+  align-items: center;
+  margin: 3%;
+} */
+
+
+h1 {
+  align-items: center;
+  margin: 3%;
+  letter-spacing: 8px;
 }
 
+/* Resources TITLE */
 .res {
   background: linear-gradient(
     to right, 
@@ -187,14 +199,12 @@ h3{
     hsl(204 100% 59%)
   );
   -webkit-background-clip: text;
+          background-clip: text; 
   -webkit-text-fill-color: transparent;
   text-align: center;
 
   
 }
-
-
-
 
 
 
@@ -297,7 +307,5 @@ width: 25%;
   .tagButtonContainer {
     margin: 0px 5%;
   }
-  .center{
-   
-  }
+ 
 }
