--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -170,21 +170,16 @@ h3{
   text-decoration: underline;
 }
 
-/* resouces and stanley button */
-/* .resources-app{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  margin: 3%;
-} */
 
 
 h1 {
-  align-items: center;
-  margin: 3%;
-  letter-spacing: 8px;
+  margin: 6% 5%;
+  font-size: 50px;
+  letter-spacing: 3px;
+  text-align: center;
 }
+
+
 
 /* Resources TITLE */
 .res {
@@ -197,8 +192,6 @@ h1 {
           background-clip: text; 
   -webkit-text-fill-color: transparent;
   text-align: center;
-
-  
 }
 
 
@@ -223,21 +216,14 @@ h1 {
 }
 
 
-.Sbtn {
+/* .Sbtn {
 width: 25%;
 }
 
 .Sbtn:hover {
   transform: scale(1.3);
-}
-
-/* 
-.titleButton{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 0 5%;
 } */
+
 
 
 .center {
