--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -173,9 +173,9 @@ h3{
 
 
 h1 {
-  margin: 6% 5%;
-  font-size: 50px;
-  letter-spacing: 3px;
+  margin: 5%;
+  font-size: 55px;
+  letter-spacing: 5px;
   text-align: center;
 }
 
@@ -216,29 +216,20 @@ h1 {
 }
 
 
-/* .Sbtn {
-width: 25%;
-}
-
-.Sbtn:hover {
-  transform: scale(1.3);
-} */
-
-
-
 .center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
+  margin: 5% 1%;
 }
 
-.formTitle{
-  display: flex;
-  justify-content: center;
-  padding-top: 30px;
-  margin-top: 20px;
+#carouselExample {
+  margin: 3% 0;
 }
 
 .form-group {
-  margin-bottom: 25px;
+  margin-bottom: 10px;
 }
 
 
