--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,21 +4,34 @@
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-<<<<<<< HEAD
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlhaEqsomYWJ2jV47_i6Ef9bAwjNqpEzA3Mw&usqp=CAU);
-=======
     background: rgb(255, 255, 255);
     background-image: url("../images/img.jpg");
     background-repeat: no-repeat;
     background-size: cover;
->>>>>>> 24bb638e2aa8ecf9e98950effa878ca9a4898d7b
 }
+.nav-links {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 20px;
+  margin-left: 50%;
+} 
+.nav-links li {
+  margin: 0;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  justify-content: space-between;
+  color: rgb(19, 225, 240)
+}
+
 .wrapper {
     width: 420px;
     background: rgb(3, 3, 3);
@@ -117,8 +130,6 @@ body {
 .register-link p a :hover {
     text-decoration: underline;
 }
-<<<<<<< HEAD
-=======
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
@@ -228,4 +239,3 @@ input[type=text], input[type=password] {
        width: 100%;
     }
   }
->>>>>>> 24bb638e2aa8ecf9e98950effa878ca9a4898d7b
