--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -168,11 +168,43 @@ footer {
 }
 
 
+.search-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#tagSearchInput {
+  width: 200px; /* Set the initial width of the input field */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+#tagSearchButton {
+  padding: 4px;
+  border: none;
+  border-radius: 5px;
+  margin-left: 3px;
+  cursor: pointer;
+}
+
+#tagSearchButton:hover{
+  background-color: whitesmoke
+ }
+ 
+   #tagSearchButton:active {
+     background-color: aqua;
+     box-shadow: 0 5px #666;
+     transform: translateX(4px);
+   }
+
+
 
 h1 {
-  margin: 5%;
   font-size: 55px;
-  letter-spacing: 5px;
+  letter-spacing: 7px;
   text-align: center;
 }
 
@@ -186,11 +218,10 @@ h4{
   letter-spacing: 5px;
 }
 
+
 .title{
-  display: flex;
-  justify-content: center;
   width: 75%;
-  margin: 0px 15%;
+  margin: 6% 12% 0%;
 }
 
 
@@ -200,6 +231,8 @@ h4{
   margin: 0px 25%;
 
 }
+
+
 
 /* This is a maybe..... */
 /* Resources TITLE */
@@ -311,15 +344,6 @@ h4{
 
 
 
-#tagSearchButton:hover{
- background-color: whitesmoke
-}
-
-  #tagSearchButton:active {
-    background-color: aqua;
-    box-shadow: 0 5px #666;
-    transform: translateX(4px);
-  }
 
 /* #TagButton Container */
 .tagButtonContainer {
@@ -352,31 +376,166 @@ h4{
 
 
 
-@media screen and (max-width: 750px) {
-  .tagButtonContainer {
-    margin: 0px 5%;
-  }
- 
-  .resources-app{
-    width: 75%;
-    height: 50%;
-    margin: 50px 15%;
-  }
-
-  .title{
-    
-    margin: 10%;
-  }
-
-  .res{
-    font-size: 80px;
-  }
 
 
-  h1{
-  font-size: 30px;
+@media screen and (max-width: 1300px) {
+  .subtitle h1{
+    font-size: xx-large;
   }
 }
 
 
 
+@media screen and (max-width: 950px) {
+  .subtitle h1{
+    font-size: x-large;
+  }
+
+  .searchFor h3 {
+    font-size: 30px;
+    letter-spacing: 5px;
+   }
+
+   .searchFor h3 {
+    font-size: xx-large;
+    letter-spacing: 7px;
+   }
+   
+   #tagSearchInput {
+    width: 175px;
+     height: 45px;
+   }
+   
+   #tagSearchButton {
+     font-size: 15px; 
+   }
+}
+
+
+@media screen and (max-width: 820px) {
+ 
+  .resources-app{
+    width: 75%;
+    margin: 50px 15%;
+  }
+
+  .title h1{
+    margin: 15% 10% 0%;
+    font-size: 35px;
+  }
+
+  /* .res{
+    font-size: 80px;
+  } */
+
+
+  h1{
+  font-size: 35px;
+  }
+
+  .subtitle h1{
+    font-size: large;
+  }
+
+
+
+.searchFor h3 {
+ font-size: x-large;
+ letter-spacing: 3px;
+}
+
+#tagSearchInput {
+ width: 150px;
+  height: 35px;
+}
+
+#tagSearchButton {
+  font-size: 15px; 
+}
+
+.tagButtonContainer {
+  margin: 0px 7%;
+}
+
+.tag-button{
+  font-size: 14px;
+}
+
+
+
+}
+
+
+
+
+
+
+@media screen and (max-width: 600px) {
+  .subtitle h1{
+    font-size: medium;
+  }
+
+  .searchFor h3 {
+    font-size: 23px;
+    letter-spacing: 2px;
+    margin-right: 5px;
+   }
+   
+   #tagSearchInput {
+    width: 125px;
+     height: 35px;
+   }
+   
+   #tagSearchButton {
+     font-size: 15px; 
+   }
+}
+
+
+@media screen and (max-width: 480px) {
+  .subtitle h1{
+    font-size: x-small;
+  }
+
+  .searchFor h3 {
+    font-size: small;
+    letter-spacing: 2px;
+   }
+   
+   #tagSearchInput {
+    width: 100px;
+     height: 35px;
+   }
+   
+   #tagSearchButton {
+     font-size: 15px; 
+   }
+}
+
+
+
+@media screen and (max-width: 380px) {
+  .subtitle h1{
+    font-size: x-small;
+  }
+
+  .searchFor h3 {
+    font-size: 18px;
+    letter-spacing: 1px;
+   }
+   
+   #tagSearchInput {
+    width: 80px;
+     height: 25px;
+   }
+   
+   #tagSearchButton {
+     font-size: 12px; 
+   }
+
+   .tag-button{
+    font-size: 10px;
+  }
+  
+
+}
