--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -45,7 +45,7 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin: 5% 25%;
+  margin: 2% 25% 10%;
   flex-wrap: wrap;
   text-align: center;
 }
@@ -348,6 +348,35 @@ main img:hover {
   transform: scale(1.2);
 
 }
+
+
+
+.addLink {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.addLink h1 {
+  font-size: 100px;
+  text-transform: uppercase;
+  font-family: 'Gambetta', serif;
+  letter-spacing: -4px;
+  transition: 500ms ease;
+  font-variation-settings: "wght";
+  color: aqua;
+  text-align: center;
+  text-shadow: 4px 4px  #2d4848;
+}
+
+.addLink h1:hover {
+  font-variation-settings: "wght" 582; 
+  letter-spacing: 2px;
+}
+
+
 
 
 .form-group {
